--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Your Blog</h1>
+        <h1 class="logo">My Blog</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a> </li>
