--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         </nav>
     </header>
     <main>
-        <section class=""about_section>
-            <article class=""about_img></article>
+        <section class="about_section">
+            <article class="about_img"></article>
             <article class="about_description">
                 <h1>프론트엔드 개발 (웹코딩) 과정</h1>
                 <p>
