--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="about.html">About</a> </li>
                 <li><a href="contact.html">Contact</a> </li>
                 <li class="float_right"> <a href="signup.html">sign up</a> </li>
-                <li class="float_right"> <a href="signin.html">sign in</a> </li>
+                <li class="float_right"> <a href="sign1.html">sign in</a> </li>
             </ul>
         </nav>
     </header>
